--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,10 +12,12 @@
   <script src="lib/jasmine-2.5.2/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="src/drink.js"></script>
+  <!-- <script src="src/rockPaperScissors.js"></script> -->
+  <script src="src/integerSequence.js"></script>
 
   <!-- include spec files here... -->
-  <script src="spec/drinkSpec.js"></script>
+<!--   <script src="spec/rockPaperScissorsSpec.js"></script>
+ -->  <script src="spec/integerSequenceSpec.js"></script>
 
 </head>
 
